cabal-version: 3.4
name: placeholder
version: 0
synopsis: placeholder definitions for TODO and unimplemented
description: placeholder definitions for TODO and unimplemented code
homepage: https://github.com/ekmett/placeholder
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2024 Edward Kmett
stability: experimental
category: Control
build-type: Simple
tested-with: GHC ==9.4.8 || ==9.6.4 || ==9.8.1
extra-doc-files: README.md, CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/placeholder

common base
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 5, ghc-prim
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wno-simplifiable-class-constraints

common test
  import: base
  build-depends: placeholder, tasty >= 1.2, tasty-hunit >= 0.10.0
  hs-source-dirs: t

library
  import: base
  hs-source-dirs: src
  exposed-modules: Control.Placeholder

test-suite placeholder-test
  import: test
  type: exitcode-stdio-1.0
  main-is: Test.hs
